@@ -1351,9 +1351,10 @@ public class HRegionServer implements HConstants, HRegionInterface, HBaseRPCErro
     if (region == null) {
       try {
         region = instantiateRegion(regionInfo);
-        // Startup a compaction early if one is needed.
-        this.compactSplitThread.
-          compactionRequested(region, "Region open check");
+        // Startup a compaction early if one is needed, if region has references.
+        if (region.hasReferences()) {
+          this.compactSplitThread.compactionRequested(region, "Region open");
+        }
       } catch (Throwable e) {
         Throwable t = cleanup(e,
           "Error opening " + regionInfo.getRegionNameAsString());
