@@ -23,6 +23,7 @@ Release 0.19.4 - Unreleased
    HBASE-1662  Tool to run major compaction on catalog regions when hbase
                is shutdown
    HBASE-1664  Disable 1058 on catalog tables
+   HBASE-1583  Start/Stop of large cluster untenable
 
 Release 0.19.3 - May 27th, 2009
   BUG FIXES
